fixed spacing for button and title

--- a/frontend/src/styles/blogposts.css
+++ b/frontend/src/styles/blogposts.css
@@ -167,6 +167,11 @@ html {
     
 }
 @media screen and (max-width: 1100px) {
+    .blog-posts-title {
+        font-size: 55px;
+        padding-bottom: 60px; /* Decrease padding to reduce space */
+        margin-bottom: 0;
+    }
     html {
         font-size: 9px !important; /* Shrinks all rem units */
     }
@@ -209,6 +214,11 @@ html {
 
 }
 @media screen and (max-width: 828px) {
+    .blog-posts-title {
+        font-size: 35px;
+        padding-bottom: 30px; /* Decrease padding to reduce space */
+        margin-bottom: 0;
+    }
     .blog-posts {
         font-size: 35px;
     }
@@ -242,6 +252,9 @@ html {
     }
     .blog-post .posts .blog-post-date {
         font-size: 10px;
+    }
+    .custom-button {
+        margin-top: 42px; 
     }
 }
 
@@ -277,6 +290,9 @@ html {
     html {
         font-size: 5px !important; /* Shrinks all rem units */
     }
+    .custom-button {
+        margin-top: 40px; 
+    }
     
 }
 @media screen and (max-width: 668px) {
@@ -294,8 +310,14 @@ html {
 }
 
 @media screen and (max-width: 568px) {
+    .blog-posts-title {
+        font-size: 30px;
+        padding-bottom: 27px; /* Decrease padding to reduce space */
+        margin-bottom: 0;
+    }
     .blog-posts {
         font-size: 25px;
+        
     }
     .blog-post-image {
         width: 100px;
@@ -311,12 +333,17 @@ html {
     html {
         font-size: 4px !important; /* Shrinks all rem units */
     }
+    .custom-button {
+        margin-top: 38px; 
+    }
     
 }
 
 @media screen and (max-width: 480px) {
     .blog-posts-title {
         font-size: 28px;
+        padding-bottom: 25px; /* Decrease padding to reduce space */
+        margin-bottom: 0;
     }
     .blog-post-image {
         width: 80px; 
@@ -329,7 +356,11 @@ html {
     .blog-post .posts .blog-post-date {
         font-size: 6px;
     }
+    .custom-button {
+        margin-top: 34px; 
+    } 
 }
+
 @media screen and (max-width: 450px) {
     html {
         font-size: 3px !important; /* Shrinks all rem units */
@@ -341,6 +372,8 @@ html {
 @media screen and (max-width: 390px) {
     .blog-posts-title {
         font-size: 25px;
+        padding-bottom: 25px; /* Decrease padding to reduce space */
+        margin-bottom: 0;
     }
     .blog-post-image {
         width: 150px;
@@ -371,6 +404,8 @@ html {
 @media screen and (max-width: 300px) {
     .blog-posts-title {
         font-size: 15px;
+        padding-bottom: 25px; /* Decrease padding to reduce space */
+        margin-bottom: 0;
     }
     .blog-post-image {
         width: 100px;
@@ -386,4 +421,7 @@ html {
     .blog-post .posts .blog-post-date {
         font-size: 6px;
     }
+    .custom-button {
+        margin-top: 30px; 
+    } 
 }
